<resources>
    <string name="app_name">MercuryController</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latest_commands">Latest Commands</string>
    <string name="motors">Motors</string>
    <string name="gripper_launcher">Gripper/Launcher</string>
    <string name="LEDs">LEDs</string>
    <string name="distance">Distance</string>
    <string name="double_dash">--</string>
    <string name="angle">Angle</string>
    <string name="timestamp">Timestamp</string>
    <string name="position">Position</string>
    <string name="led_number">LED Number</string>
    <string name="status">Status</string>
    <string name="relaunch_video_call">Relaunch Video Call</string>
    <string name="greeting">Welcome to the Rose-Hulman Mercury Robotics app</string>
    <string name="stop_service">Stop Service</string>
    <string name="restart_service">Restart Service</string>
</resources>
